--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-lazy-load": "^4.0.1",
+    "react-leaflet": "^4.2.1",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.11.0",
     "react-to-pdf": "^0.0.14",
@@ -30,6 +31,7 @@
     "swiper": "^9.2.4"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
